# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/mogrtgage/cache": {
+        "/mortgage/cache": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -32,7 +32,7 @@
                 }
             }
         },
-        "/mogrtgage/execute": {
+        "/mortgage/execute": {
             "get": {
                 "consumes": [
                     "application/json"
